--- a/views/login.html
+++ b/views/login.html
@@ -1,1 +1,13 @@
-我是登录页面
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>内容加图片</title>
+</head>
+<body>
+  <p>我的文字内容</p>
+  <img src="./showimg" alt="">
+</body>
+</html>
