--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,23 @@
   <title>内容加图片</title>
 </head>
 <body>
-  <p>我的文字内容</p>
-  <img src="./showimg" alt="">
+  <!-- <p>我的文字内容</p> -->
+  <!-- <img src="./showimg" alt=""> -->
+
+  <form action="./login" method="post">
+    <table>
+      <tr>
+        <td>email:</td>
+        <td><input type="text" name="email"></td>
+      </tr>
+      <tr>
+        <td>pwd:</td>
+        <td><input type="password" name="pwd"></td>
+      </tr>
+      <tr>
+        <td><input type="submit" value="登录"></td>
+      </tr>
+    </table>
+  </form>
 </body>
 </html>
