--- a/views/login.html
+++ b/views/login.html
@@ -9,8 +9,9 @@
 <body>
   <!-- <p>我的文字内容</p> -->
   <!-- <img src="./showimg" alt=""> -->
-
-  <form action="./login" method="post">
+  <p>email:{email}</p>
+  <p>pwd:{pwd}</p>
+  <form action="./login" method="get">
     <table>
       <tr>
         <td>email:</td>
